# lab01_setup_cpp_template

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
